# flower_CNN

./: .clang-format  CMakeLists.txt  README.md  compile_flags.txt  convolution.cpp  convolution.hpp  dataset.hpp  forward.cpp  layers.hpp  main.cpp  main.out  matrices.cpp  matrix.hpp  resize.py  script.py  tensor_print.hpp  test.cpp
dataset/: resize.py
dataset/dataset_old/: cat_to_name.json  data_loader.py
